compiler/kernc_cli/tests/soundness/run-pass/specialization/rich_trait_object_can_upcast_to_bare_supertrait_object.rn
// exit: 0

type Base[N: usize] = trait {
    type Out;
    tag: fn() i32,
};

type Derived[N: usize]: Base[N] = trait {
    more: fn() i32,
};

type X = struct {};

impl[N: usize] *X: Derived[N] {
    fn more() i32 {
        return 2;
    }
}

impl[N: usize] *X: Base[N] {
    type Out = i32;

    fn tag() i32 {
        return 1;
    }
}

impl *X: Base[4] {
    type Out = i64;

    fn tag() i32 {
        return 9;
    }
}

fn take(value: *Base[4]) i32 {
    return value.tag() - 9;
}

fn main() i32 {
    let x = X.{};
    let derived = *Derived[4].{ x.& };
    return take(derived);
}
